fix laravel support

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "An simple validator for EU vat numbers with validation rule for requests",
   "license": "MIT",
   "type": "library",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "authors": [
     {
       "name": "Cosmnin Ciolacu",
@@ -17,7 +17,7 @@
     "EuVatNumberValidator"
   ],
   "require": {
-    "illuminate/support": "~9"
+    "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
